# neuro-notifications-client

./: .pre-commit-config.yaml  README.md  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: ci.yaml  setup-automerge.yml
notifications_client/: client.py
tests/unit/: test_notify.py
