[metadata]
name = neuro-notifications-client
description = Notifications client for Neu.ro platform services
url = https://github.com/neuro-inc/neuro-notifications-client
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
packages = find:
install_requires =
    aiohttp>=3.7
    marshmallow>=3.13.0

[tool:pytest]
addopts=
    -vv
    --cov-config=setup.cfg
    --cov-branch
    --cov-report term-missing:skip-covered
log_cli=false
log_level=INFO
filterwarnings=error
  ignore::DeprecationWarning:yaml
  ignore:returning HTTPException object is deprecated.+:DeprecationWarning:aiodocker
  ignore:ssl_context is deprecated.+:DeprecationWarning:aiodocker

[mypy]
follow_imports = silent
strict_equality = True
# --strict option
#warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
show_error_codes = True

#next option is actual for python 3.6 only
[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-aiojobs.*]
ignore_missing_imports = True

[mypy-iso8601]
ignore_missing_imports = True
